# Whispr

./: .gitignore  GITHUB_SETUP.md
whispr-rs/: .env.example  Cargo.toml  DEMO.md  FAQ.md  GEMINI_SETUP.md  PACKAGING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  TESTING.md  check_prerequisites.ps1  check_prerequisites.sh  package.json  postMemo.js
whispr-rs/src/: ai.rs  audio.rs  blockchain.rs  main.rs  ocr.rs  ui.rs  utils.rs
