[package]
name = "whispr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
cpal = "0.15"
whisper-rs = "0.12"
hound = "3"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
home = "=0.5.5"
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
indicatif = "0.17"
rdev = "0.5"
tao = "0.16"
wry = "0.24"
base64 = "0.22"

 
